--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Jogo da forca do teste de software</h1>
-    <img id="imagem" src="forcaimagem.png" alt="">
+    <img id="imagem" src="forca0.png" alt="">
     <div id="exibicao-palavra"></div>
     <input type="text" id="entrada-letra" placeholder="chute uma letra!" maxlength="1">
     <button id="btn-chutar" onclick="chutarLetra()">chutar</button>
